--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .Navbarcont{
     padding: 10px;
-    background-color: rgb(49, 89, 177);
+    background: linear-gradient(-90deg,rgba(1, 16, 39, 0),rgba(8, 1, 51, 0.9));
+    background-color: #3aaf1d;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
