--- a/src/components/locationAndSun/locationAndSun.css
+++ b/src/components/locationAndSun/locationAndSun.css
@@ -4,10 +4,10 @@
     width:auto;
 }
 .flag{
-    margin-top: 30px;
-    height:200px;
-    width:200px;
-    margin-left: 10px;
+    margin: auto;
+}
+.flag img{
+    width: 100%;
 }
 .locContainer{
     width:auto;
