--- a/src/pages/mainPage/mainPage.css
+++ b/src/pages/mainPage/mainPage.css
@@ -5,7 +5,7 @@
 }
 
 .colorContainer{
-    background-image: linear-gradient(90deg, #020024 0%, #1d44af 35%, #8aa9ff 100%);
+    background-image: linear-gradient(90deg, #020024 0%, #4baf1d 35%, #8aa9ff 100%);
    
 
 }
