--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -28,8 +28,7 @@
     align-items: center ;
     width: 210px;
     height: 110px;
-    margin: auto;
-    margin-bottom: 20px;
+    margin: 5px auto 5px auto;
 
 }
 
